# Flake-Template

./: .gitignore  README.md  flake.nix
templates/c-dev/: .gitignore  CMakeLists.txt  DEV.md  flake.nix
templates/c-dev/src/: file1.c  header.h  main.c
templates/cpp-dev/: .gitignore  CMakeLists.txt  DEV.md  flake.nix
templates/cpp-dev/src/: greeter.cpp  greeter.hpp  main.cpp
templates/python-dev/: flake.nix
